--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body.light-mode .project-description {
     color: #000000 !important;
 }
 
+body.light-mode .navbar-nav img,
 body.light-mode .wave,
 body.light-mode .name,
 body.light-mode .timer,
@@ -72,6 +73,10 @@ body.light-mode .project-overlay-grid {
     box-shadow: 0 2px 10px rgb(0 0 0 / 69%);
     padding: 0.3rem 0;
     z-index: 300;
+}
+
+.navbar-nav img {
+    filter: brightness(100) invert(100) !important;
 }
 
 .navbar-nav {
@@ -674,7 +679,8 @@ body.light-mode .project-overlay-grid {
 .timer-date {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    padding-right: 10px !important;
     padding: 6px;
     margin-left: 6px;
     margin-right: 6px;
