--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+body {
+    background-image: url('../images/dark_background.webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
 body.light-mode,
 body.light-mode p,
 body.light-mode .section-heading,
