--- a/css/style.css
+++ b/css/style.css
@@ -296,8 +296,6 @@ body.light-mode .project-overlay-grid {
     display: inline-flex;
     align-items: baseline;
     position: relative;
-    min-width: 200px;
-    max-width: 100%;
     vertical-align: middle;
 }
 
@@ -338,7 +336,6 @@ body.light-mode .project-overlay-grid {
     justify-content: flex-start;
     gap: 15px;
     margin-bottom: 45px;
-    margin-left: 10px;
     margin-top: -60px;
 }
 
@@ -351,8 +348,8 @@ body.light-mode .project-overlay-grid {
 .im-line {
     margin-bottom: 0;
     display: flex;
-    align-items: center;
     justify-content: flex-start;
+    align-items: flex-start;
     gap: 15px;
     flex-wrap: nowrap;
     width: 90%;
